Fixing where my 'Group Rules' button appears on smaller screens

--- a/static/app.css
+++ b/static/app.css
@@ -336,7 +336,7 @@ nav {
 
 #rules-btn {
   position: absolute;
-  left: 20px;
+  left: 40px;
   border: none;
   background-color: transparent;
   color: crimson;
